@@ -497,17 +497,19 @@ int csoundLoadExternal(void *csound, const char* libraryPath)
       }
     }
     opcodlst_n = (*init)(csound);
-    olength = oplstend-opcodlst;
-    if (O.odebug) {
-      printf("Got opcodlst 0x%x\noplstend=0x%x, opcodlst=0x%x, length=%d.\n",
-             opcodlst_n, oplstend, opcodlst, olength);
-      printf("Adding %d bytes (%d opcodes) -- first opcode is '%s'.\n",
-             length, length/sizeof(OENTRY), opcodlst_n[0].opname);
+    if (length > 0L) {
+      olength = oplstend-opcodlst;
+      if (O.odebug) {
+        printf("Got opcodlst 0x%x\noplstend=0x%x, opcodlst=0x%x, length=%d.\n",
+               opcodlst_n, oplstend, opcodlst, olength);
+        printf("Adding %d bytes (%d opcodes) -- first opcode is '%s'.\n",
+               length, length/sizeof(OENTRY), opcodlst_n[0].opname);
+      }
+      opcodlst = (OENTRY*) mrealloc(csound, opcodlst,
+                                    olength*sizeof(OENTRY) + length);
+      memcpy(opcodlst+olength, opcodlst_n, length);
+      oplstend = opcodlst + olength + length/sizeof(OENTRY);
     }
-    opcodlst = (OENTRY*) mrealloc(csound, opcodlst,
-                                  olength*sizeof(OENTRY) + length);
-    memcpy(opcodlst+olength, opcodlst_n, length);
-    oplstend = opcodlst + olength + length/sizeof(OENTRY);
     return 0;
 
  err_return:
